tests/baselines/reference/moduleResolution_packageJson_yesAtPackageRoot(strict=true).errors.txt
/a.ts(1,19): error TS7016: Could not find a declaration file for module 'foo/bar'. '/node_modules/foo/bar/index.js' implicitly has an 'any' type.
  Try `npm i --save-dev @types/foo` if it exists or add a new declaration (.d.ts) file containing `declare module 'foo/bar';`


==== /a.ts (1 errors) ====
    import { x } from "foo/bar";
                      ~~~~~~~~~
!!! error TS7016: Could not find a declaration file for module 'foo/bar'. '/node_modules/foo/bar/index.js' implicitly has an 'any' type.
!!! error TS7016:   Try `npm i --save-dev @types/foo` if it exists or add a new declaration (.d.ts) file containing `declare module 'foo/bar';`
    
==== /node_modules/foo/bar/index.js (0 errors) ====
    not read
    
==== /node_modules/foo/package.json (0 errors) ====
    { "name": "foo", "version": "1.2.3", "types": "types.d.ts" }
    
==== /node_modules/foo/types.d.ts (0 errors) ====
    export const x = 0;
    